--- a/homework/homework-1.ipynb
+++ b/homework/homework-1.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### 📅 **Due Date**: Day of Lecture 2, 11:59 PM\n",
     "\n",
-    "#### 🔗 **My Repository**: https://github.com/YOUR-USERNAME/ai-engineering-fordham\n",
+    "#### 🔗 **My Repository**: https://github.com/eatapple54/ai-engineering-fordham\n",
     "\n",
     "*(Replace the URL above with your actual repository URL -- read below for instructions)*\n",
     "\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -533,15 +533,19 @@
       "On branch main\n",
       "Your branch is up to date with 'origin/main'.\n",
       "\n",
-      "Changes to be committed:\n",
-      "  (use \"git restore --staged <file>...\" to unstage)\n",
-      "\tmodified:   homework/homework-1.ipynb\n",
-      "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
       "\tmodified:   homework/homework-1.ipynb\n",
-      "\n"
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t.python-version\n",
+      "\tmain.py\n",
+      "\tpyproject.toml\n",
+      "\tuv.lock\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
@@ -569,12 +573,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c98eb32 Complete homework 1\n",
+      "8b16b2f Add ce homework-1\n",
+      "e848eaf Initial commit\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 8b: Show your commit history\n",
-    "!git log --oneline -3\n"
+    "!git log --oneline -3"
    ]
   },
   {
@@ -597,12 +611,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My repository: https://github.com/eatapple54/ai-engineering-fordham\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 8d: Write your repository URL\n",
-    "my_repo_url = \"\"  # e.g., \"https://github.com/your-username/ai-engineering-fordham\"\n",
+    "my_repo_url = \"https://github.com/eatapple54/ai-engineering-fordham\"  # e.g., \"https://github.com/your-username/ai-engineering-fordham\"\n",
     "\n",
     "print(f\"My repository: {my_repo_url}\")"
    ]
