--- a/homework/homework-2.ipynb
+++ b/homework/homework-2.ipynb
@@ -577,7 +577,6 @@
     ")\n",
     "\n",
     "# Make sure to create temp directory\n",
-    "os.makedirs(\"temp\", exist_ok=True)\n",
     "cwd = os.getcwd()\n",
     "project_root = os.path.dirname(cwd)\n",
     "output_path = os.path.join(project_root, 'temp', 'movie_poster.png')\n",
@@ -711,9 +710,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\thomework/homework-2.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/eatapple54/ai-engineering-fordham\n",
+      "   33cf0b6..942fc00  main       -> origin/main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57742a2 Complete homework 2: Movie Poster Generator\n",
+      "33cf0b6 Complete homeowrk 1\n",
+      "c98eb32 Complete homework 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify your PR was merged (run after merging on GitHub)\n",
     "!git checkout main\n",
